# Kohaku-XinYu

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE-NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  OPEN_SOURCE_POLICY.md  Plan.md  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh.md  ROADMAP.md  SECURITY.md  STICKER-SYSTEM-PLAN.md  Start-XinYu-Desktop.ps1  Start-XinYu-Frontend.ps1  Start-XinYu-QQ.ps1  Start-XinYu-TinyKernel.ps1  Stop-XinYu-Desktop.bat  Stop-XinYu-Desktop.ps1  Stop-XinYu-TinyKernel.ps1  THIRD-PARTY-NOTICES.md  Verify-XinYu-QQ.cmd  Write-XinYu-Autonomy-Journal.ps1  Write-XinYu-Thoughts.ps1  XINYU-24H-REFACTOR-SUMMARY.md  XINYU-24H-WORK-PLAN.md  XINYU-LONG-RUN-OPERATIONS.md  XINYU-REFACTOR-CHECKLIST.md  XINYU-STATE-WRITE-AUDIT.md  XINYU-VALIDATION-MATRIX.md  XinYu.ps1  plan-next-5.md  plan-next.md  (+1 more)
XinYu-Core/: .gitignore  README.md  README.zh-CN.md  README.zh.md  ROADMAP.md  pyproject.toml
XinYu-Core/examples/agent-apps/xinyu/: ARCHITECTURE.md  CHANGELOG-XINYU.md  CURRENT-REFACTOR-PLAN.md  DEPLOYMENT-STATUS-RUNBOOK.md  EXECUTION-ORDER.md  EXPLORATION-SCENARIOS.md  EXPRESSION-STABILITY.md  FAILURE-MODES.md  FAILURE-SCENARIOS.md  GRANT-PROGRESS-REPORT-TEMPLATE.md  IMPLEMENTATION-NEXT.md  INDEX.md  INNER-MEMORY-ORDER.md  INTERACTIVITY-RESEARCH.md  LEARNER-ROUTING.md  LEARNING-BOUNDARIES.md  LEARNING-LIBRARY.md  LOCAL-INSPECTOR-DEMO.md  LONG-RUN-AUDIT.md  MEMORY-LAYERS.md  MEMORY-REDUCTION-RULES.md  NEURO-INSPIRED-ENGINEERING-RULES.md  OPEN-ENDED-BOUNDED-LOOP.md  PERSONA-LIVING-SURFACE-RULES.md  PRIVACY-BOUNDARY.md  PROMPT-TUNING.md  README.en.md  README.ja.md  README.md  RUNBOOK.md  RUNTIME-PRIORITIES.md  RUNTIME-VALIDATION-NOTES.md  SESSION-REVIEW.md  STATE-OF-XINYU.md  STRUCTURE-NOTES.md  TEST-SCENARIOS.md  TRACE-SCHEMA.md  VALIDATION-INDEX.md  WRITER-ROUTING.md  XINYU-CROSS-DOMAIN-SYNAESTHESIA.md  (+1161 more)
XinYu-Core/examples/agent-apps/xinyu/config/: tool_targets.json
XinYu-Core/examples/agent-apps/xinyu/custom/: ai_self_iteration_gate_bridge_plugin.py  ai_self_iteration_gate_engine.py  ai_self_iteration_review_bridge_plugin.py  ai_self_iteration_review_engine.py  archive_commit_bridge_plugin.py  archive_output_bridge_plugin.py  automation_bridge_manifest.py  automation_bridge_plugin.py  autonomous_search_activation_bridge_plugin.py  autonomous_search_activation_engine.py  consolidation_bridge_plugin.py  consolidation_engine.py  desktop_thoughts_bridge_plugin.py  dormant_reactivation_engine.py  dream_output_bridge_plugin.py  dream_output_engine.py  github_autonomous_learning_bridge_plugin.py  github_autonomous_learning_engine.py  initiative_loop_bridge_plugin.py  initiative_loop_engine.py  inner_cycle_bridge_plugin.py  inner_cycle_engine.py  inner_framework_manifest.py  learner_integration_bridge_plugin.py  learner_integration_engine.py  learning_quality_bridge_plugin.py  learning_quality_engine.py  long_term_memory_gate_bridge_plugin.py  long_term_memory_gate_engine.py  maintenance_bridge_utils.py  maintenance_dispatch_manifest.py  maintenance_recommendation_manifest.py  maintenance_schedule_bridge_plugin.py  memory_event_schema.py  (+41 more)
XinYu-Core/src/xinyu_runtime/: README.md  __briefcase__.py  __init__.py  __main__.py  packages.py  packages_manifest.py  registry.json
XinYu-Core/src/xinyu_runtime/api/: README.md  app.py  deps.py  events.py  main.py
XinYu-Core/src/xinyu_runtime/bootstrap/: agent_init.py  io.py  llm.py  plugins.py  subagents.py  tools.py  triggers.py
XinYu-Core/src/xinyu_runtime/builtin_skills/: __init__.py
XinYu-Core/src/xinyu_runtime/builtins/: README.md  __init__.py  subagent_catalog.py  tool_catalog.py
XinYu-Core/src/xinyu_runtime/cli/: README.md  __init__.py  auth.py  config.py  config_mcp.py  config_prompts.py  extension.py  mcp.py  memory.py  model.py  packages.py  resume.py  run.py  serve.py  version.py
XinYu-Core/src/xinyu_runtime/commands/: README.md  __init__.py  read.py
XinYu-Core/src/xinyu_runtime/compose/: __init__.py  agent.py  core.py
XinYu-Core/src/xinyu_runtime/core/: README.md  __init__.py  agent.py  agent_handlers.py  agent_messages.py  agent_model.py  agent_pre_dispatch.py  agent_runtime_tools.py  agent_tools.py  backgroundify.py  budget.py  channel.py  compact.py  config.py  config_types.py  controller.py  controller_plugins.py  conversation.py  environment.py  events.py  executor.py  loader.py  output_wiring.py  registry.py  scratchpad.py  session.py  termination.py  trigger_manager.py
XinYu-Core/src/xinyu_runtime/llm/: README.md  __init__.py  anthropic_cache.py  api_keys.py  backends.py  base.py  codex_auth.py  codex_image_gen.py  codex_provider.py  codex_rate_limits.py  failover.py  openai.py  preset_aliases.py  preset_store.py  presets.py  profiles.py  tools.py  variations.py
XinYu-Core/src/xinyu_runtime/mcp/: client.py  tools.py
XinYu-Core/src/xinyu_runtime/modules/: __init__.py
XinYu-Core/src/xinyu_runtime/parsing/: README.md  __init__.py  format.py  patterns.py  state_machine.py
XinYu-Core/src/xinyu_runtime/prompt/: README.md  __init__.py  aggregator.py  framework_hints.py  loader.py  plugins.py  skill_loader.py  template.py  tool_contributions.py
XinYu-Core/src/xinyu_runtime/serving/: README.md  __init__.py  agent_session.py  events.py  manager.py  web.py
XinYu-Core/src/xinyu_runtime/session/: README.md  __init__.py  artifacts.py  embedding.py  memory.py  output.py  resume.py  store.py
XinYu-Core/src/xinyu_runtime/skills/: __init__.py  command.py  discovery.py  hints.py  index.py  paths.py  registry.py  user_slash.py
XinYu-Core/src/xinyu_runtime/terrarium/: README.md  __init__.py  api.py  cli.py  cli_output.py  config.py  creature.py  factory.py  hotplug.py  observer.py  output_log.py  output_wiring.py  persistence.py  runtime.py  tool_manager.py  tool_registration.py
XinYu-Core/src/xinyu_runtime/testing/: README.md  __init__.py  agent.py  llm.py  output.py
XinYu-Core/src/xinyu_runtime/utils/: __init__.py  async_utils.py  file_guard.py  file_walk.py  logging.py  paths.py
XinYu-Core/tests/: test_plugin_base.py
(+2414 files in other folders)
